##########################################################################
#                                                                        #
#                              FLAX                                      #
#                                                                        #
#                       Copyright (C) 2014                               #
#                                                                        #
#                         Sylvain Conchon                                #
#                                                                        #
#                     Universite Paris-Sud 11                            #
#                                                                        #
#                                                                        #
#  This file is distributed under the terms of the Apache Software       #
#  License version 2.0                                                   #
#                                                                        #
##########################################################################

AC_INIT(main.ml)

AC_CHECK_PROG(OCAMLC,ocamlc.opt,ocamlc.opt,no)
if test "$OCAMLC" = no ; then
	AC_MSG_ERROR(Cannot find ocamlc.)
fi

OCAMLVERSION=`$OCAMLC -version`
echo "ocaml version is $OCAMLVERSION"
OCAMLLIB=`$OCAMLC -where`
echo "ocaml library path is $OCAMLLIB"

# we look for ocamlfind; if not present, we just don't use it to find
# libraries
AC_CHECK_PROG(USEOCAMLFIND,ocamlfind,yes,no)

if test "$USEOCAMLFIND" = yes; then
   OCAMLFINDLIB=$(ocamlfind printconf stdlib)
   OCAMLFIND=$(which ocamlfind)
   if test "$OCAMLFINDLIB" != "$OCAMLLIB"; then
    USEOCAMLFIND=no;
    echo "but your ocamlfind is not compatible with your ocamlc:"
    echo "ocamlfind : $OCAMLFINDLIB, ocamlc : $OCAMLLIB"
   fi
fi


AC_CHECK_PROG(OCAMLOPT,ocamlopt.opt,ocamlopt.opt,no)
OCAMLBEST=byte
if test "$OCAMLOPT" = no ; then
	AC_MSG_WARN(Cannot find ocamlopt; bytecode compilation only.)
else
        OCAMLBEST=opt
fi

AC_CHECK_PROG(OCAMLDEP,ocamldep,ocamldep,no)
if test "$OCAMLDEP" = no ; then
	AC_MSG_ERROR(Cannot find ocamldep.)
fi

AC_CHECK_PROG(OCAMLLEX,ocamllex,ocamllex,no)
if test "$OCAMLLEX" = no ; then
    AC_MSG_ERROR(Cannot find ocamllex.)
fi

AC_CHECK_PROG(OCAMLYACC,ocamlyacc,ocamlyacc,no)
if test "$OCAMLYACC" = no ; then
	AC_MSG_ERROR(Cannot find ocamlyacc.)
fi

AC_MSG_CHECKING(platform)
if echo "let _ = Sys.os_type" | ocaml | grep -q Win32; then
    echo "Windows platform"
    AC_MSG_RESULT(Win32)
    OCAMLWIN32=yes
    EXE=.exe
else
    echo "Unix platform"
    OCAMLWIN32=no
    EXE=
fi

#looking for functory library

if test "$USEOCAMLFIND" = yes; then
  OCAMLGRAPHLIB=$(ocamlfind query -i-format ocamlgraph)
  OCAMLGRAPHLIBDIR=$(ocamlfind query ocamlgraph)
fi

if test -n "$OCAMLGRAPHLIB";then
  echo "ocamlfind found ocamlgraph in $OCAMLGRAPHLIB"
  OCAMLGRAPHLD=yes
else
  AC_CHECK_FILE($OCAMLLIB/ocamlgraph/graph.cma,OCAMLGRAPHLD=yes,OCAMLGRAPHLD=no)
  if test "$OCAMLGRAPHLD" = no ; then
      AC_MSG_RESULT(Cannot find ocamlgraph library.)
      OCAMLGRAPHLIB=""
  else
     OCAMLGRAPHLIB="-I +ocamlgraph"
  fi
fi



AC_SUBST(OCAMLC)
AC_SUBST(OCAMLOPT)
AC_SUBST(OCAMLDEP)
AC_SUBST(OCAMLLEX)
AC_SUBST(OCAMLYACC)
AC_SUBST(OCAMLBEST)
AC_SUBST(OCAMLVERSION)
AC_SUBST(OCAMLLIB)
AC_SUBST(OCAMLWIN32)
AC_SUBST(EXE)
AC_SUBST(OCAMLGRAPHLIB)
AC_SUBST(OCAMLGRAPHLIBDIR)

AC_OUTPUT(Makefile)
chmod a-w Makefile
